--- a/src/routes/Browse/style.scss
+++ b/src/routes/Browse/style.scss
@@ -19,10 +19,3 @@ $filter-sidebar-width: 300px;
     width: unset;
   }
 }
-
-
-@media (max-width: 991.98px) {
-  .browse-inner-container {
-    // width: unset;
-  }
-}
